--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
     <meta name="description" content="Interested in creating a professional website to have greater visibility and greater reach, my name is William Romero web developer and I would be very happy to help you.">
     <link rel="alternate" hreflang="x-default" href="http://williamrmo.com/" />
     <link rel="alternate" hreflang="es" href="http://williamrmo.com/es/index.html" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-130942046-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-130942046-1');
+</script>
+
 </head>
 <body>
     <i class="icon-menu burguer-button" id="burguer-menu"></i>
