--- a/es/index.html
+++ b/es/index.html
@@ -30,14 +30,14 @@
         <div class="container">
             <div>
                 <figure class="logo">
-                    <h1>william romero</h1>
+                    <h1>William Romero</h1>
                 </figure>
             </div>
             <nav class="menu">
                 <ol>
                     <li><a href="#about" class="link">sobre m&iacute;</a></li>
                     <li><a href="#skills" class="link">habilidades</a></li>
-                    <li><a href="./es/index.html" class="link">eng</a></li>
+                    <li><a href="../index.html" class="link">eng</a></li>
                 </ol>
             </nav>
         </div>
