--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="container">
             <div>
                 <figure class="logo">
-                    <h1>william romero</h1>
+                    <h1>William Romero</h1>
                 </figure>
             </div>
             <nav class="menu">
