--- a/es/index.html
+++ b/es/index.html
@@ -127,7 +127,7 @@
         <div class="modal" id="modal">
             <h1>¡Hola!</h1>
             <p>Puedes enviarme un email a mi correo</p>
-            <p>williamrmo84@gmail.com</p>
+            <p>rmunozwillian@gmail.com</p>
             <div class="modal-buttons">
                 <button class="btn primary" id="hide-modal">Inicio</button>
             </div>
