--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="modal" id="modal">
             <h1>Hello!</h1>
             <p>You can send me an email to my email</p>
-            <p>williamrmo84@gmail.com</p>
+            <p>rmunozwillian@gmail.com</p>
             <div class="modal-buttons">
                 <button class="btn primary" id="hide-modal">Home</button>
             </div>
